# llm-agentic-framework

./: README.md
ai-scientist/rslearn/: .pre-commit-config.yaml  LICENSE  README.md  extra_requirements.txt  pyproject.toml  requirements.txt  test_requirements.txt
ai-scientist/rslearn/design/: Architecture.md  FeatureList.md  Overview.md
ai-scientist/rslearn/design/workflows/: GeotiffInference.md  GlobalWebMercatorInference.md  SolarFarms.md
ai-scientist/rslearn/docs/: CoreConcepts.md  DatasetConfig.md  Examples.md
ai-scientist/rslearn/docs/examples/: WindowsFromGeojson.md
ai-scientist/rslearn/rslearn/: __init__.py  const.py  log_utils.py  main.py
ai-scientist/rslearn/rslearn/config/: __init__.py  dataset.py
ai-scientist/rslearn/rslearn/data_sources/: __init__.py  aws_landsat.py  aws_open_data.py  climate_data_store.py  copernicus.py  data_source.py  gcp_public_data.py  geotiff.py  google_earth_engine.py  local_files.py  openstreetmap.py  planet.py  utils.py  (+5 more)
ai-scientist/rslearn/tests/: conftest.py
ai-scientist/rslearn_projects/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
ai-scientist/rslearn_projects/ai2_docs/: README.md  batch_inference.md  coding_best_practices_brainstorm.md
ai-scientist/rslearn_projects/amazon_conservation/: README.md
ai-scientist/rslearn_projects/convert_satlas_webmercator_to_rslearn/: README.md  assign_split.py  config.json
ai-scientist/rslearn_projects/docs/: landsat_vessels.md  satlas_marine_infra.md  sentinel2_vessels.md
ai-scientist/rslearn_projects/one_off_projects/: README.md
ai-scientist/rslearn_projects/rslp/: __init__.py  config.py  docker_entrypoint.py  launch_beaker.py  launcher_lib.py  lightning_cli.py  log_utils.py  main.py  rslearn_main.py
ai-scientist/rslearn_projects/sentinel2_postprocess_revamp/: README.md  config.json  convert_to_multisat.py  create_windows.py  get_label_csv.py  rslearn_entrypoint.py  ship_types.py  train_config_ms.yaml  train_config_rgb_crop_imagenet.yaml  train_config_rgb_flip_imagenet.yaml  train_config_rgb_flip_satlaspretrain.yaml  train_config_rgb_flip_satlaspretrain_nonorm.yaml  train_config_rgb_flipcrop_imagenet.yaml  train_config_rgb_noflip_imagenet.yaml  train_config_rgb_noflip_satlaspretrain.yaml  train_config_rgb_noflip_satlaspretrain_fpn.yaml  train_config_rgb_noflip_satlaspretrain_freeze.yaml  visualize.py  visualize_html.py
ai-scientist/rslearn_projects/tools/: create_cropped_tiff.py
(+425 files in other folders)
