[project]
name = "rslearn"
version = "0.0.2"
description = "A library for developing remote sensing datasets and models"
authors = [
    {name = "Favyen Bastani", email = "favyenb@allenai.org"},
    {name = "Yawen Zhang", email = "yawenz@allenai.org"},
    {name = "Patrick Beukema", email = "patrickb@allenai.org"},
    {name = "Henry Herzog", email = "henryh@allenai.org"},
    {name = "Piper Wolters", email = "piperw@allenai.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.entry-points.console_scripts]
rslearn = "rslearn.main:main"

[tool.setuptools.packages.find]
include = ["rslearn*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {extra = { file = ["extra_requirements.txt"] }}

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]
